--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -345,16 +345,20 @@ function apply_filter() {
     coverage_fg.clearLayers();
     if (selected_type == 'site') {
         add_to_layer(full_data, markers_clustered, true);
+        $(".coverage_legend").hide();
         $(".legend").hide();
         //    $(".marker-cluster").addClass('blue');
         $("#cluster_color_css").attr({href: "/static/tigamap/MarkerCluster.tigamap_blue.css"});
     } else if (selected_type == 'adult') {
         add_to_layer(full_data, markers_clustered, true);
+        $(".coverage_legend").hide();
         $(".legend").show();
         //    $(".marker-cluster").removeClass('blue');
         $("#cluster_color_css").attr({href: "/static/tigamap/MarkerCluster.tigamap_yellow_single.css"});
 
     } else if (selected_type == 'coverage') {
+        $(".coverage_legend").show();
+        $(".legend").hide();
         add_to_coverage_fg(full_coverage_data, coverage_fg, true);
     }
 }
@@ -412,7 +416,7 @@ function get_coverage_data(id_start, id_stop, map) {
             if (data != null && data.length > 0) {
                 full_coverage_data = full_coverage_data.concat(data);
 
-            apply_filter();
+                apply_filter();
 
             }
 
@@ -615,13 +619,82 @@ function map_init_basic(map, options) {
 </div>
 
 
-
-
 <div id="tigamap" class="leaflet-container-default"></div>
 
 <div id="progress_bar_container" class="my-progress-bar-container">
     <div id="progress_bar" class="my-progress-bar">
     </div>
+</div>
+
+
+<div class="coverage_legend">
+
+    <div class="legend-main-table-container">
+        <table class="legend-main-table">
+            <tr>
+                <td colspan="2">
+                    <p style="font-weight: bold; font-size: 1.2em; text-align: center;">{% trans 'coverage_legend_main_title' %}</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div style="background-color: rgba(255, 0,0,.7);padding:0; border: 1px solid red; width: 40px; height: 50px;"></div>
+                    <br>
+
+                </td>
+                <td style="white-space: nowrap;">
+                    >1000
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div style="background-color: rgba(255, 0,0,.5);padding:0; border: 1px solid red; width: 40px; height: 50px;"></div>
+                    <br>
+                </td>
+                <td style="white-space: nowrap;">
+                    101-1000
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div style="background-color: rgba(255, 0,0,.3);padding:0; border: 1px solid red; width: 40px; height: 50px;"></div>
+                    <br>
+
+                </td>
+                <td style="white-space: nowrap;">
+
+                    1-100
+
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="legend-blurb"><p
+            style="font-weight: bold; text-align: center">{% trans 'coverage_legend_info_title' %}</p>
+        {% trans 'coverage_legend_info_blurb' %}
+    </div>
+
+    <div id="more_info_div"><span
+            style="font-weight:bold; font-style:italic;font-size:.9em;color:#444444;">{% trans 'more_info' %}
+</span>
+
+    </div>
+
+    <div id="more_info_button">
+        <a href="{% trans 'map_help_url_new' %}" target="_blank">
+            <div class="info-button-background"><img width="30px" height="30px"
+                                                     src="{% static "tigamap/info_button.png" %}"></div>
+        </a>
+
+    </div>
+
+
+    <i id="hand-left" style="padding-left:10px;" class="fa fa-hand-o-left fa-2x"></i>
+
+
+</div>
+
+
 </div>
 
 
