zoom controls on map to topright fixing

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -124,6 +124,10 @@
         padding-left: 1px;
     }
 
+    .leaflet-control-zoom-out{
+        display:none !important;
+    }
+
 </style>
 
 <!-- FA CSS -->
