zoom controls on map to topright fixing

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -124,7 +124,7 @@
         padding-left: 1px;
     }
 
-    .leaflet-control-zoom-out{
+    .leaflet-control-zoom-out.leaflet-control-zoom-out leaflet-bar-part{
         display:none !important;
     }
 
